artdanj-shortener/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artdanj-shortener
  namespace: artdanj-shortener
  labels:
    app: artdanj-shortener
spec:
  selector:
    app: artdanj-shortener
  type: LoadBalancer
  ports:
    - port: 1012
      name: shortener
      targetPort: 1012
      protocol: TCP
    - port: 6379
      name: redis
      targetPort: 6379
      protocol: TCP
